kubernetes/com-stouffcapital-tableau.yaml
apiVersion: v1
kind: Service
metadata:
  name: com-stouffcapital-tableau
  namespace: tableau
  labels:
    app: com-stouffcapital-tableau
spec:
  ports:
  - port: 5000
  selector:
    app: com-stouffcapital-tableau
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: com-stouffcapital-tableau
  namespace: tableau
  labels:
    app: com-stouffcapital-tableau
spec:
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: com-stouffcapital-tableau
    spec:
      containers:
      - image: stouffcapital/com-stouffcapital-tableau
        name: com-stouffcapital-tableau
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: tableau-persistent-storage
          mountPath: /app/app/static/data
      volumes:
      - name: tableau-persistent-storage
        persistentVolumeClaim:
          claimName: com-stouffcapital-tableau-pv-claim
