kubernetes/com-stouffcapital-tableau-ing-ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tableau
  namespace: tableau
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"

    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120s"
spec:
  tls:
  - hosts:
    - tableau.stouffcapital.com
    secretName: tableau-stouffcapital-service-tls
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: tableau.stouffcapital.com
    http:
      paths:
      - path: /
        backend:
          serviceName: com-stouffcapital-tableau
          servicePort: 5000
