kubernetes/com-stouffcapital-tableau-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tableau
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: tableau.stouffcapital.com
    http:
      paths:
      - path: /
        backend:
          serviceName: com-stouffcapital-tableau
          servicePort: 5000
